# linch-pc-base

./: .env.example  .gitignore  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
.changeset/: config.json  rust-crate-fix.md  test-release.md
.github/workflows/: ci.yml  release.yml
docs/: updater.md
playground/: index.html  package.json  vite.config.ts
playground/src/: App.tsx  config.ts  index.css  main.tsx
playground/src-tauri/: Cargo.toml  tauri.conf.json
playground/src-tauri/.keys/: update.key.pub
playground/src-tauri/capabilities/: default.json
playground/src-tauri/src/: lib.rs  main.rs
playground/src/pages/: Dashboard.tsx  Demo.tsx  Settings.tsx
scripts/: detach.js  generate-icons.js  sync-versions.mjs
src/: App.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.keys/: update.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/base/: Shell.tsx  TitleBar.tsx
src/components/providers/: DatabaseProvider.tsx  ErrorBoundary.tsx
src/components/shared/: Logo.tsx  (+4 more)
src/config/: app.tsx
src/hooks/: use-database.ts  use-theme.ts  use-updater.ts
src/i18n/: config.ts
src/lib/: api.example.ts  api.test.ts  api.ts  config.ts  database.ts  logger.ts  sentry.ts  tauri.ts  updater.ts
src/pages/: Dashboard.tsx  Demo.tsx  Settings.tsx
src/stores/: counter.test.ts  counter.ts
src/test/: setup.ts
(+1 files in other folders)
